# restq

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: artifacts.cmake  build_artifacts.cmake  build_configuration.cmake  build_manifest.cmake  configuration.cmake  manifest.cmake
cmake/modules/: Findasio.cmake  Findcatch.cmake  Findjson.cmake  Findkashmir.cmake  Findload.cmake  Findloadis.cmake  Findmd5.cmake  Findopenssl.cmake  Findrestbed.cmake
documentation/: API.md  DESIGN.md  FEATURES.md  NETWORK-API.md  RESOURCES.md  STANDARDS.md  UML.md  uml.MD
example/: CMakeLists.txt
example/exchange/source/: json_formatter.cpp  json_formatter.hpp  stdout_logger.hpp  stl_repository.cpp  stl_repository.hpp
example/http_exchange/source/: example.cpp  json_formatter.cpp  json_formatter.hpp  stdout_logger.cpp  stdout_logger.hpp  stl_repository.cpp  stl_repository.hpp
source/: restq
source/corvusoft/restq/: byte.hpp  exchange.cpp  exchange.hpp  formatter.hpp  logger.hpp  query.cpp  query.hpp  repository.hpp  request.hpp  resource.hpp  response.hpp  session.hpp  settings.cpp  settings.hpp  ssl_settings.hpp  status_code.hpp  string.cpp  string.hpp  uri.hpp
source/corvusoft/restq/detail/: dispatch_impl.cpp  dispatch_impl.hpp  error_handler_impl.cpp  error_handler_impl.hpp  exchange_impl.cpp  exchange_impl.hpp  query_impl.hpp  rule.hpp  ruleset.hpp  system_impl.cpp  system_impl.hpp  validator_impl.cpp  validator_impl.hpp
source/corvusoft/restq/detail/rule/: accept.hpp  accept_charset.hpp  accept_encoding.hpp  accept_language.hpp  accept_ranges.hpp  content_encoding.hpp  content_language.hpp  content_length.hpp  content_md5.hpp  content_type.hpp  date.hpp  echo.hpp  etag.hpp  expect.hpp  fields.hpp  filters.hpp  host.hpp  key.hpp  keys.hpp  last_modified.hpp  location.hpp  paging.hpp  range.hpp  style.hpp  version.hpp
test/acceptance/features/: client_side_identifiers.feature  end_to_end_http.feature  message_delivery_circuit_breaker.feature  message_header_forwarding.feature  message_multiplexing.feature  message_query_parameter_forwarding.feature  queue_message_limit.feature  queue_message_size_limit.feature  queue_subscription_limit.feature  reserved_words.feature  supported_data_types.feature  terrain.py
test/acceptance/features/resources/asterisk/: http_connect.feature  http_delete.feature  http_get.feature  http_head.feature  http_options.feature  http_patch.feature  http_post.feature  http_put.feature  http_trace.feature
test/acceptance/features/resources/asterisk/header/: accept.feature  accept_charset.feature  accept_encoding.feature  accept_language.feature  connection.feature  expect.feature  host.feature  if_match.feature  if_modified_since.feature  if_none_match.feature  if_range.feature  if_unmodified_since.feature  range.feature  upgrade.feature
test/acceptance/features/resources/message/: http_connect.feature  http_delete.feature  http_get.feature  http_head.feature  http_options.feature  http_patch.feature  http_post.feature  http_put.feature  http_trace.feature
test/acceptance/features/resources/message/header/: accept.feature  accept_charset.feature  accept_encoding.feature  accept_language.feature  connection.feature  expect.feature  host.feature  if_match.feature  if_modified_since.feature  if_none_match.feature  if_range.feature  if_unmodified_since.feature  range.feature  upgrade.feature
test/acceptance/features/resources/messages/: http_connect.feature  http_delete.feature  http_get.feature  http_head.feature  http_options.feature  http_patch.feature  http_post.feature  http_put.feature  http_trace.feature
test/acceptance/features/resources/messages/header/: accept.feature  accept_charset.feature  accept_encoding.feature  accept_language.feature  connection.feature  content_encoding.feature  content_length.feature  content_md5.feature  content_type.feature  expect.feature  host.feature  if_match.feature  if_modified_since.feature  if_none_match.feature  if_range.feature  if_unmodified_since.feature  last_modified.feature  location.feature  range.feature  transfer_encoding.feature  upgrade.feature
test/acceptance/features/resources/queue/: http_connect.feature  http_delete.feature  http_get.feature  http_head.feature  http_options.feature  http_patch.feature  http_post.feature  http_put.feature  http_trace.feature
test/acceptance/features/resources/queue/header/: accept.feature  accept_charset.feature  accept_encoding.feature  accept_language.feature  connection.feature  content_encoding.feature  content_length.feature  content_md5.feature  content_type.feature  expect.feature  host.feature  if_match.feature  if_modified_since.feature  if_none_match.feature  if_range.feature  if_unmodified_since.feature  last_modified.feature  range.feature  transfer_encoding.feature  upgrade.feature
test/acceptance/features/resources/queue/query/: echo.feature  fields.feature  filter.feature  style.feature
test/acceptance/features/resources/queues/: http_connect.feature  http_delete.feature  http_get.feature  http_head.feature  http_options.feature  http_patch.feature  http_post.feature  http_put.feature  http_trace.feature
test/acceptance/features/resources/queues/header/: accept.feature  accept_charset.feature  connection.feature  (+18 more)
test/acceptance/features/resources/subscription/: http_connect.feature  http_delete.feature  http_get.feature  http_head.feature  http_options.feature  http_patch.feature  http_post.feature  http_put.feature  http_trace.feature
test/acceptance/features/resources/subscriptions/: http_connect.feature  http_delete.feature  http_get.feature  http_head.feature  http_options.feature  http_patch.feature  http_post.feature  http_put.feature  http_trace.feature
test/acceptance/features/step_definitions/: request.py  response.py  setup.py
test/integration/: CMakeLists.txt
test/integration/source/: exchange_suite.cpp  query_suite.cpp
test/unit/: CMakeLists.txt
test/unit/source/: exchange_suite.cpp  query_suite.cpp  settings_suite.cpp  string_suite.cpp
tool/cppcheck/: options
tool/cppclean/: options
(+61 files in other folders)
